shopingkart/src/objects/Outfit__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>OutFit</relationshipLabel>
        <relationshipName>OutFit1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>OutFit</relationshipLabel>
        <relationshipName>OutFit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>conclusion</label>
        <picklist>
            <picklistValues>
                <fullName>Like</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dislike</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Send</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>STYLE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>STYLE</label>
        <referenceTo>STYLE__c</referenceTo>
        <relationshipLabel>OutFit</relationshipLabel>
        <relationshipName>OutFit</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Outfit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Result__c</columns>
        <columns>STYLE__c</columns>
        <columns>Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Outfit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OutFit</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>